--- a/pages/login.html
+++ b/pages/login.html
@@ -109,7 +109,7 @@
   <script src="/login.js"></script>
   <script src="/register.js"></script>
   <script src="/modal.js"></script>
-  <script src="../app.js"></script>
+  <script src="../server.js"></script>
   <script src="https://kit.fontawesome.com/bfa8aba362.js" crossorigin="anonymous"></script>
 </body>
 </html>
